fix: footer gap

--- a/styles/main.css
+++ b/styles/main.css
@@ -91,7 +91,6 @@ section {
 }
 footer {
     padding: 1rem 2rem 2rem 1rem;
-    margin-bottom:2rem;
     background-color: var(--primary-dark);
     color: var(--white);
     text-align:center;
